feat: 동물목록 필터링 기능 정상 동작하게 구현